@@ -1,3 +1,7 @@
+2012-07-25  Julien Danjou  <julien@danjou.info>
+
+	* gnus-art.el (gnus-kill-sticky-article-buffers): Reintroduce.
+
 2012-07-24  Julien Danjou  <julien@danjou.info>
 
 	* mail-source.el (mail-source-movemail-and-remove): Remove, unused.
